--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
     src: url(./assets/fonts/ABCFavorit-Regular.woff);
  }
 
+ @font-face {
+    font-family: ABCFavoriteTrialLight;
+    src: url(./assets/fonts/ABCFavorit-Light.woff);
+ }
 
  @font-face {
     font-family: ABCArizonaMixLight;
@@ -37,6 +41,7 @@ body{
     margin: 30px 40px 30px 40px;
     max-width: 100%;
     overflow-x: hidden;
+    background-color: #FCFCF5;
 }
 
 
@@ -82,11 +87,12 @@ body{
 }
 
 .nav__right__text{
-    font-family: ABC Favorit Trial;
+    font-family: ABCFavoriteTrial;
     font-style: normal;
     font-weight: normal;
     font-size: 30px;
     color: #0F0E09;
+    text-align: end;
     
 }
 
@@ -97,7 +103,6 @@ body{
 .img1{
     margin-top: 31px;
     display: flex;
-    
 }
 
 
@@ -106,11 +111,19 @@ body{
     position: relative;
 }
 
+.img1__background::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(73.81deg, rgba(15, 14, 9, 0.3) 36.4%, rgba(15, 14, 9, 0) 78.65%);
+}
+
 .img1__background img{
     width: 100%;
     object-fit: cover;
-    z-index: -999;
-    background-image: linear-gradient(73.81deg, rgba(15, 14, 9, 0.3) 36.4%, rgba(15, 14, 9, 0) 78.65%);
 }
 
 .img1__text{ 
@@ -124,6 +137,7 @@ body{
     font-size: 4.5rem;
     line-height: 80px;
     width: 80%;
+    z-index: 1;
    
 }
 
@@ -134,6 +148,7 @@ body{
     font-weight: normal;
     font-size: 1.125rem;
     line-height: 30px;
+    z-index: 1;
 
     position: absolute;
     bottom: 9.875rem;
@@ -149,6 +164,11 @@ body{
     font-size: 16px;
     line-height: 100%;
     color: #0F0E09;
+    z-index: 1;
+    
+
+    background: #FCFCF5;
+    border-radius: 6px;
 
     position: absolute;
     bottom: 5.625rem;
@@ -173,6 +193,7 @@ body{
     position: absolute;
     bottom: 12px;
     right: 15px;
+    z-index: 1;
   
 }
 /*--------IMG1-------*/
@@ -199,7 +220,7 @@ body{
 }
 
 .left__text{
-        font-family: ABCFavoriteTrial;
+        font-family: ABCFavoriteTrialLight;
         font-style: normal;
         font-weight: normal;
         font-size: 30px;
@@ -244,7 +265,7 @@ body{
 
 .right__text{
         margin-top: 29vh;
-        font-family: ABCFavoriteTrial;
+        font-family: ABCFavoriteTrialLight;
         font-style: normal;
         font-weight: normal;
         font-size: 30px;
@@ -261,6 +282,7 @@ body{
 }
 
 .underline{
+    font-family: ABCFavoriteTrialLight;
     text-decoration: none;
 	padding-bottom: 2px;
 	background: url(./assets/images/underline.png) bottom repeat-x;
@@ -294,22 +316,31 @@ body{
     position: relative; 
 }
 
+.img2::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(359.78deg, rgba(15, 14, 9, 0.3) 10.87%, rgba(15, 14, 9, 0) 42.38%);
+}
+
+
 .img2 img{
     width: 100%;
     object-fit: cover;
-    z-index: -999;
-    background: linear-gradient(359.78deg, rgba(15, 14, 9, 0.3) 10.87%, rgba(15, 14, 9, 0) 42.38%);
 }
 
 .img2__desc{
     width: 40%;
-    z-index: 1000;
     margin-bottom: 0px;
     padding-bottom: 0px;
 
     position: absolute;
     bottom: 5.625rem;
     right: 10.34375rem;
+    z-index: 1;
 }
 
 .img2__signature{
@@ -352,25 +383,33 @@ body{
     margin-top: 3.2vh;
     width: 100%;
     position: relative;
-    
+}
+
+
+.img3::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(359.78deg, rgba(15, 14, 9, 0.3) 10.87%, rgba(15, 14, 9, 0) 42.38%);
 }
 
 .img3 img{
     width: 100%;
     object-fit: cover;
-    background: linear-gradient(359.78deg, rgba(15, 14, 9, 0.3) 10.87%, rgba(15, 14, 9, 0) 42.38%);
-
 }
 
 .img3__desc{
     width: 40%;
-    z-index: 1000;
     margin-bottom: 0px;
     padding-bottom: 0px;
 
     position: absolute;
     bottom: 5.625rem;
     left: 16.875rem;
+    z-index: 1;
 }
 
 .img3__signature{
@@ -493,7 +532,7 @@ body{
     width: 90%;
     font-family:  ABCFavoriteTrial;
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 16px;
     line-height: 24px;
 }
@@ -569,9 +608,9 @@ body{
 
 .link__text__info{
     padding-right: 117px;
-    font-family: ABCFavoriteTrial;
+    font-family: ABCFavoriteTrialLight;
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 16px;
     line-height: 24px;
 }
@@ -596,6 +635,10 @@ body{
     font-size: 120px;
     line-height: 108px;
     text-align: center;
+
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: clip;
 
 }
 
