Update news and php

--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ body{
 }
 
 
+
 .nav__right__links a{
     text-decoration: none;
     font-family: ABCFavoriteMono;
@@ -97,6 +98,9 @@ body{
 }
 
 /*------NAVIGATION -----*/
+
+
+/*****************************************index.php********************************************/
 
 /*--------IMG1-------*/
 
@@ -676,3 +680,355 @@ body{
 .row{
     display: none;
 }
+
+
+/*****************************************index.php********************************************/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/********************************************news.php*******************************************/
+
+.container__first{
+    margin-top: 30px;
+    border-top: 1px solid black;
+}
+
+
+/*******container___first__links*******/
+
+.container__first__links {
+    margin-top: 24px;
+    margin-left: 10px;
+ 
+}
+
+.container__first__links a{
+    text-decoration: none;
+    font-family: ABCFavoriteMono;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 16px;
+    padding-right: 40px;
+
+  
+    align-items: center;
+    text-transform: uppercase;
+
+
+    color: #0F0E09;
+    opacity: 0.7;
+}
+
+.container__first__links a:nth-child(2){
+    padding-right: 30px;
+}
+
+/*******container___first__links*******/
+
+
+/*******container___first__title*******/
+
+.container__first__title{
+    margin-top: 25px;
+    
+
+    font-family: ABCArizonaMixRegular;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 120px;
+    line-height: 120px;
+    letter-spacing: -0.07em;
+    color: #0F0E09;
+}
+
+
+.container__first__content{
+    width: 100%;
+    margin-top: 60px;
+    z-index: 1;
+    display: flex;
+    justify-content: flex-end;
+  
+}
+
+
+.container__first__article{ 
+    width: 75%;
+    margin-right: -40px;
+    justify-content: flex-end;
+}
+
+.container__first__article img{
+    width: 100%;
+    object-fit: cover;
+}
+
+
+
+.container__first__content__title{
+font-family: ABCArizonaMixRegular;
+font-style: normal;
+font-weight: normal;
+font-size: 30px;
+line-height: 105%;
+letter-spacing: -0.02em;
+color: #0F0E09;
+margin-top: 48px;
+}
+
+.container__first__content__text{
+    margin-top: 12px;
+    font-family: ABCFavoriteTrial;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    font-feature-settings: 'ss03' on;
+    color: #0F0E09;
+    width: 60%;
+
+}
+
+/*******container___first__title*******/
+
+
+
+
+/*******conversations*******/
+
+.conversations{
+    margin-top: 137px;
+   
+}
+
+.conversations__title{
+    font-family: ABCFavoriteMono;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 16px;
+
+    letter-spacing: -0.02em;
+    text-transform: uppercase;
+    color: #0F0E09;
+
+    padding-bottom: 2vh;
+    border-bottom: 1px solid black;
+
+}
+
+
+.conversations__articles{
+    margin-top: 43px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.conversation__article{
+    width: 32.6%;
+}
+
+.conversation__article img{
+    width: 100%;
+    object-fit: cover;
+}
+
+.conversation__article__title{
+    font-family: ABCArizonaMixRegular;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 30px;
+    line-height: 105%;
+    letter-spacing: -0.02em;
+    color: #0F0E09;
+    margin-top: 18px;
+}
+
+.conversation__article__text{
+    margin-top: 12px;
+    font-family: ABCFavoriteTrial;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    font-feature-settings: 'ss03' on;
+    color: #0F0E09;
+    width: 80%;
+    
+}
+
+/*******conversations*******/
+
+
+/*******container__stories*******/
+
+.container__stories{
+    margin-top: 94px;
+    border-top: 1px solid black;
+}
+
+.container__stories__article{
+    margin-top: 42px;
+    border-bottom: 1px solid black;
+    padding-bottom: 52px;
+    display: flex;
+    width: 100%;
+}
+
+.container__stories__article__img{
+    width: 50%;
+    padding-right: 24px;
+}
+
+.container__stories__article img{
+  width: 100%;
+  object-fit: cover;
+}
+
+.container__stories__article__story{
+    width: 50%;
+    padding-left: 24px;
+}
+
+.article__story__title{
+    font-family: ABCArizonaMixRegular;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 30px;
+    line-height: 105%;
+    letter-spacing: -0.02em;
+    color: #0F0E09;
+    margin-top: 45px;
+}
+
+.article__story__text{
+    margin-top: 12px;
+    font-family: ABCFavoriteTrial;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    font-feature-settings: 'ss03' on;
+    color: #0F0E09;
+    width: 85%;
+}
+
+/*******container__stories*******/
+
+/*******container__second__content*******/
+
+.container__second__content{
+    margin-top: 120px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+
+.container__second__article{ 
+    width: 75%;
+    margin-right: -40px;
+    justify-content: flex-end;
+}
+
+.container__second__article img{
+    width: 100%;
+    object-fit: cover;
+    margin-top: 42px;
+}
+
+/*******container__second__content*******/
+
+.staff__picks{
+    margin-top: 174px;
+}
+
+.staff__picks__title{
+    font-family: ABCFavoriteMono;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 16px;
+    letter-spacing: -0.02em;
+    text-transform: uppercase;
+    color: #0F0E09;
+
+    border-bottom: 1px solid black;
+    padding-bottom: 19px;
+}
+
+.staff__picks__articles{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.staff__picks__article{
+    width: 49.5%;
+    margin-top: 42px;
+    padding-bottom: 84px;
+}
+
+.article__image img{
+    width: 100%;
+    object-fit: cover;
+}
+
+.article__title{
+    font-family: ABCArizonaMixRegular;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 30px;
+    line-height: 105%;
+    letter-spacing: -0.02em;
+    color: #0F0E09;
+    margin-top: 18px;
+}
+
+.article__text{
+    margin-top: 12px;
+    font-family: ABCFavoriteTrial;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    font-feature-settings: 'ss03' on;
+    color: #0F0E09;
+    width: 95%;
+}
+
+
+.show__more{
+    font-family: ABCFavoriteTrial;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 60px;
+    line-height: 30px;
+
+    letter-spacing: -0.05em;
+    font-feature-settings: 'ss03' on;
+    color: #0F0E09;
+
+    margin-top: 16px;
+    text-align: end;
+
+}
+/********************************************news.php*******************************************/
