--- a/responsive.css
+++ b/responsive.css
@@ -92,7 +92,7 @@ body{
 /*--------GALLERY2------*/
 
 /*--------FOOTER------*/
-.footer{
+.page__footer{
     display: none;
 }
 /*--------FOOTER------*/
