--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ body{
 
 /*------NAVIGATION -----*/
 .nav{
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
