index & news (.php modules)

--- a/responsive.css
+++ b/responsive.css
@@ -92,7 +92,7 @@ body{
 /*--------GALLERY2------*/
 
 /*--------FOOTER------*/
-.page__footer{
+.footer{
     display: none;
 }
 /*--------FOOTER------*/
